Bump dropwizard.version from 2.0.18 to 2.0.24 (#118)
* Bump dropwizard.version from 2.0.18 to 2.0.24

Bumps `dropwizard.version` from 2.0.18 to 2.0.24.

Updates `dropwizard-core` from 2.0.18 to 2.0.24

Updates `dropwizard-testing` from 2.0.18 to 2.0.24

Updates `dropwizard-client` from 2.0.18 to 2.0.24

---
updated-dependencies:
- dependency-name: io.dropwizard:dropwizard-core
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: io.dropwizard:dropwizard-testing
  dependency-type: direct:development
  update-type: version-update:semver-patch
- dependency-name: io.dropwizard:dropwizard-client
  dependency-type: direct:development
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Update deps and error prone config

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: André Schaffer <andre.schaffer@gmail.com>